--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="page-content">
                     <img id="pattern-quote" src="./images/pattern-quotes.svg" alt="pattern quotes">
-                    <p>´´a I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. ``</p>
+                    <p>´´ I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. ``</p>
                     <div class="footer-content">
                         <h2>Tanya Sinclair</h2>
                         <span>UX Engineer</span>
